--- a/src/main/webapp/StartSide.html
+++ b/src/main/webapp/StartSide.html
@@ -36,7 +36,7 @@ refresh
     <button onclick="openForm()" class="button1">Tilføj ny aftale</button>
 </div>
 
-
+<!--test kommentar -->
 <!--DETTE ER FOR AUTOGENNERET TIDER -->
 <div class="autotidersted" id="autosted">
     <div class="autotiderbar" id="autotiderbar">Tider på dagen:</div>
