--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -53,19 +53,20 @@
 <p>
     <label for="start">Dato fra:</label>
 
-    <input type="date" id="start" name="trip-start"
+    <input type="date" id="start" name="resultat-start"
            value="2018-07-22"
            min="2018-01-01" max="2023-12-31">
 
 
     <label for="start">Dato til:</label>
 
-    <input type="date" id="start" name="trip-start"
+    <input type="date" id="slut" name="resultat-slut"
            value="2018-07-22"
            min="2018-01-01" max="2023-12-31">
 </p>
 
 <!-- et eksempel for at vise resultatet i boksen efter man har valgt de relevante datoer samt undersøgelse  -->
+
 <form action="//www.html.am/html-codes/forms/html-form-tag-action.cfm" target="result" method="get">
 
     <div style="margin-top:50px;"> </div>
@@ -75,7 +76,6 @@
     <select name="Resultater"> <option value ="vælg"></option>
         <option value ="Blodprøver">Blodprøver</option>
         <option value ="EKG">EKG</option>
-        <option value ="Urinprøver">Urinprøver</option>
 
     </select>
     <p><input type="submit" value="Submit"></p>
