--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -21,16 +21,12 @@
                 <button class="button1" onclick="window.location.replace('Importside.html')"> Import</button>
                 <button class="button1" onclick="window.location.replace('Resultatside.html')">resultater</button>
                 <button class="button1" onclick="logud()">Log ud</button>
-
             </div>
 
 
 
             </div>
-        </div>
 
-
-    </div>
 
 
     <!-- Her begynder selve Resultat- siden, hvor man ville kunne vælge dato samt resultat.   -->
@@ -50,6 +46,7 @@
 </div>
 
 <!-- 2 labels, som et eksemple, hvis man vil vise resultat i et bestemt periode, så ville man kunne vælge dato fra og til   -->
+<div>
 <p>
     <label for="start">Dato fra:</label>
 
@@ -64,6 +61,7 @@
            value="2022-01-01"
            min="2018-01-01" max="2023-12-31">
 </p>
+</div>
 
 <!-- et eksempel for at vise resultatet i boksen efter man har valgt de relevante datoer samt undersøgelse  -->
 
