test af canvas fra undervisning

--- a/src/main/webapp/Chart - undervisning/CanvasTest.html
+++ b/src/main/webapp/Chart - undervisning/CanvasTest.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>EKG-visualisering</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.js"></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="CanvasTest.js"></script>
 </head>
 <body>
 
-<h1>EKG visualisering</h1>
+EKG visualisering
 <canvas id="mycanvas" height="600" width="800">
 
 </canvas>
