fikset database. Prøver nu at sende data i graf

--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -47,10 +47,10 @@
 
 <!--   Skrive CPR-nummer       -->
 <div class="CPR-nummerChoose">
-    <input type="text" id="CPRnummer" required name="cprNummerVælger" >
-    <label for="CPRnummer">CPR</label>
+    <input type="text" id="CPRnummerBoks" required name="cprNummerVælger" >
+    <label for="CPRnummerBoks">CPR</label>
 
-    <button onclick="findEKG()" type="button">Hent EKG-data</button>
+    <button onclick="HentEkgData()" type="button">Hent EKG-data</button>
 
 </div>
 
@@ -93,20 +93,7 @@
 
 
 
-<!--
-<div class="chartWrap">
-    <div class="chartArea">
-        <canvas id="myChart" height="300">
-        </canvas>
-    </div>
-</div>
--->
-<!--<iframe
-        name="result" style="height:500px;width:1000px;">
-</iframe> -->
 
-
-<!-- Herunder kan de valgte undersøgelser/sider printes -->
 
 </div>
 
