EKG overførsel til database virker igen

--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -81,7 +81,7 @@
                                                                                        onclick="window.print();return false;">Print</a>
 <div class="chartWrap">
 
-    <canvas id="myChart" style="height: 369px;"></canvas>
+    <canvas id="myChart" ></canvas>
     <section class="range-slider">
         <span class="rangeValues"></span>
         <input value="1" min="1" max="" type="range"/>
