--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="Startside.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="Canvas.js"></script>
+    <script src="Resultatside.js"></script>
 
     <!-- Nedenunder angives stylesheet der skal bruges til at lave bla. menu-baren, som skal være på alle sider -->
 
@@ -84,8 +84,8 @@
     <canvas id="myChart" ></canvas>
     <section class="range-slider">
         <span class="rangeValues"></span>
-        <input value="1" min="1" max="" type="range"/>
-        <input value="100" min="1" max="" type="range"/>
+        <input value="1" min="1" max="10000" type="range"/>
+        <input value="10000" min="1" max="10000" type="range"/>
     </section>
 </div>
 
@@ -101,7 +101,6 @@
 
 
 </body>
-<script src="Resultatside.js"></script>
 </html>
 
 
