--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -52,64 +52,70 @@
 
 
     <button onclick="findEKGSession()" type="button">Find sessions</button>
+    <button onclick="findAlleEKGSessions()" type="button">Find alle sessions</button>
 
 </div>
 
-<div class="SesIDtilEKG">
-    <label for="sesID">SessionID</label>
-    <input type="text" id="sesID" required name="sesID">
+<div class="searchField" id="searchFieldArea">
 
-    <button onclick="HentEkgData()" type="button">Hent EKG-data</button>
+</div>-->
 
-</div>
+    <div class="SesIDtilEKG">
+        <label for="sesID">SessionID</label>
+        <input type="text" id="sesID" required name="sesID">
 
+        <button onclick="HentEkgData()" type="button">Hent EKG-data</button>
 
-<!-- 2 labels, som et eksemple, hvis man vil vise resultat i et bestemt periode, så ville man kunne vælge dato fra og til   -->
-<div>
-    <p>
-        <label for="start">Dato fra:</label>
-
-        <input type="date" id="start" name="resultat-start"
-               value="2022-01-01"
-               min="2018-01-01" max="2023-12-31">
+    </div>
 
 
-        <label for="start">Dato til:</label>
+    <!-- 2 labels, som et eksemple, hvis man vil vise resultat i et bestemt periode, så ville man kunne vælge dato fra og til   -->
+    <div>
+        <p>
+            <label for="start">Dato fra:</label>
 
-        <input type="date" id="slut" name="resultat-slut"
-               value="2022-01-01"
-               min="2018-01-01" max="2023-12-31">
-    </p>
-</div>
-
-<!-- et eksempel for at vise resultatet i boksen efter man har valgt de relevante datoer samt undersøgelse  -->
-
-
-<h3>Resultat:</h3>
-<i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#"
-                                                                                       onclick="window.print();return false;">Print</a>
-<div class="chartWrap">
-
-    <canvas id="myChart" ></canvas>
-    <section class="range-slider">
-        <span class="rangeValues"></span>
-        <input value="1" min="1" max="10000" type="range"/>
-        <input value="1000" min="1" max="10000" type="range"/>
-    </section>
-</div>
+            <input type="date" id="start" name="resultat-start"
+                   value="2022-01-01"
+                   min="2018-01-01" max="2023-12-31">
 
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<style type="text/css">
-    .fa_custom {
-        color: #0099CC
-    }
-</style>
+            <label for="start">Dato til:</label>
 
-<div style="margin-top:50px;"></div>
+            <input type="date" id="slut" name="resultat-slut"
+                   value="2022-01-01"
+                   min="2018-01-01" max="2023-12-31">
+        </p>
+    </div>
+
+    <!-- et eksempel for at vise resultatet i boksen efter man har valgt de relevante datoer samt undersøgelse  -->
+
+
+    <h3>Resultat:</h3>
+    <i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#"
+                                                                                           onclick="window.print();return false;">Print</a>
+    <div class="chartWrap">
+
+        <canvas id="myChart"></canvas>
+        <section class="range-slider">
+            <span class="rangeValues"></span>
+            <input value="1" min="1" max="10000" type="range"/>
+            <input value="1000" min="1" max="10000" type="range"/>
+        </section>
+    </div>
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <style type="text/css">
+        .fa_custom {
+            color: #0099CC
+        }
+    </style>
+
+    <div style="margin-top:50px;"></div>
 
 
 </body>
+
 </html>
 
 
