--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -62,8 +62,8 @@
 </div>
 
     <div class="SesIDtilEKG">
-        <label for="sesID">SessionID</label>
-        <input type="text" id="sesID" required name="sesID">
+        <label for="sessionID">SessionID</label>
+        <input type="text" id="sessionID" required name="sessionID">
 
         <button onclick="HentEkgData()" type="button">Hent EKG-data</button>
 
