--- a/src/main/webapp/Importside.html
+++ b/src/main/webapp/Importside.html
@@ -4,30 +4,37 @@
     <meta charset="UTF-8">
     <title>Importside</title>
     <link rel="stylesheet" type="text/css" href="Importside.css">
+    <link rel="stylesheet" type="text/css" href="Startside.css">
 </head>
 <body>
+<div class="main">
+    <!-- Menu-barens indhold, i form af en unordered list -->
+    <!-- List items er de forskellige sider, som er forbundet via. et href link. -->
+    <div class="hotbar">
+        <button class="button1" onclick="window.location.replace('Importside.html')"> Import</button>
+        <button class="button1" onclick="window.location.replace('Resultatside.html')">Resultater</button>
+        <button class="button1" onclick="window.location.replace('StartSide.html')">Startside</button>
+        <button class="button1" onclick="logud()">Log ud</button>
+    </div>
+</div>
+
+
 <input type="text" id="cpr">
+<input type="button" onclick="findAftalerImport()" >
+
+
 <div class="dropdown">
-    <button onclick="myFunction()" class="dropdownbtn">Vælg gruppe</button>
+    <button onclick="myFunction()" class="dropdownbtn">Vælg data</button>
     <div id="myDropdown" class="dropdown-content">
-        <label value="gruppe 1" onclick="fetchfunction('1');">Gruppe 1</label>
-        <label value="gruppe 2" onclick="fetchfunction('2');">Gruppe 2</label>
-        <label value="gruppe 3" onclick="fetchfunction('3');">Gruppe 3</label>
-        <label value="gruppe 4" onclick="fetchfunction('4');">Gruppe 4</label>
-        <label value="gruppe 5" onclick="fetchfunction('5');">Gruppe 5</label>
-    </div>
-
-</div>
-<div class="dropdown">
-    <button onclick="myFunction()" class="dropdownbtn">Vælg funktion</button>
-
-    <div id="searchType" class="dropdown-content">
-        <label value="0">Find Aftaler</label>
-        <label value="2">Find EKG SessionID</label>
-        <label value="4">Find EKG data </label>
+        <label value="gruppe 1" onclick="fetchfunction('1');">Aftaler</label>
+        <label value="gruppe 2" onclick="fetchfunction('2');">Session ID</label>
+        <label value="gruppe 3" onclick="fetchfunction('3');">EKG data</label>
     </div>
 </div>
-<button class="button1" onclick="window.location.replace('StartSide.html');">Go back</button>
+
+
+<!-- <button class="button1" onclick="window.location.replace('StartSide.html');">Go back</button> -->
+
 </body>
 
 <div class="tekstfelt" id="tekstfelt"></div>
