--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -24,94 +24,88 @@
             <button class="button1" onclick="window.location.replace('StartSide.html')">Startside</button>
             <button class="button1" onclick="logud()">Log ud</button>
         </div>
-
-
     </div>
-
 
     <!-- Her begynder selve Resultat- siden, hvor man ville kunne vælge dato samt resultat.   -->
 
     <title> PrøveResultater</title>
 
 </head>
-
-
 <body>
-
-
 <h1>Prøve Resultater </h1>
-
 <div style="margin-top:50px;">
 
 </div>
 
 <!--   Skrive CPR-nummer       -->
-
 <div class="CPR-nummerChoose">
-    <label for="CPRBoks">CPR:</label>
-    <input type="text" id="CPRBoks">
-
-    <button onclick="findAlleEKGSessions()" type="button">Find sessions</button>
-    <!--<button onclick="findAlleEKGSessions()" type="button">Find alle sessions</button>-->
+    <h3>Find sessionID ud fra CPR-nummer</h3>
+    <label for="CPRnummerBoks">CPR:</label>
+    <input type="text" id="CPRnummerBoks" required name="cprNummerVælger">
 </div>
-<div class="searchField" id="searchFieldArea"></div>
+<div>
+    <button onclick="findEKGSession()" type="button">Find sessions</button>
+    <button onclick="findAlleEKGSessions()" type="button">Find alle sessions</button>
+</div>
+
+<div class="searchField" id="searchFieldArea"></div>-->
+
+<div class="SesIDtilEKG">
+    <h3>Indtast sessionID og hent EKG-måling</h3>
+    <label for="sesID">SessionID:</label>
+    <input type="text" id="sesID" required name="sesID">
+</div>
+<div>
+    <button onclick="HentEkgData()" type="button">Hent EKG-data</button>
+
+</div>
 
 
-    <div class="SesIDtilEKG">
-        <label for="sessionID">SessionID</label>
-        <input type="text" id="sessionID" required>
+<!-- 2 labels, som et eksemple, hvis man vil vise resultat i et bestemt periode, så ville man kunne vælge dato fra og til   -->
+<div>
+    <p>
+        <label for="start">Dato fra:</label>
 
-        <button onclick="HentEkgData()" type="button">Hent EKG-data</button>
+        <input type="date" id="start" name="resultat-start"
+               value="2022-01-01"
+               min="2018-01-01" max="2023-12-31">
+    </p>
+    <p>
+        <label for="start">Dato til:</label>
 
-    </div>
+        <input type="date" id="slut" name="resultat-slut"
+               value="2022-01-01"
+               min="2018-01-01" max="2023-12-31">
+    </p>
+</div>
 
-
-    <!-- 2 labels, som et eksemple, hvis man vil vise resultat i et bestemt periode, så ville man kunne vælge dato fra og til   -->
-    <div>
-        <p>
-            <label for="start">Dato fra:</label>
-
-            <input type="date" id="start" name="resultat-start"
-                   value="2022-01-01"
-                   min="2018-01-01" max="2023-12-31">
-
-
-            <label for="start">Dato til:</label>
-
-            <input type="date" id="slut" name="resultat-slut"
-                   value="2022-01-01"
-                   min="2018-01-01" max="2023-12-31">
-        </p>
-    </div>
-
-    <!-- et eksempel for at vise resultatet i boksen efter man har valgt de relevante datoer samt undersøgelse  -->
+<!-- et eksempel for at vise resultatet i boksen efter man har valgt de relevante datoer samt undersøgelse  -->
 
 
-    <h3>Resultat:</h3>
-    <i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#" onclick="window.print();return false;">Print</a>
-    <div class="chartWrap">
+<h3>Resultat:</h3>
+<i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#"
+                                                                                       onclick="window.print();return false;">Print</a>
+<div class="chartWrap">
 
-        <canvas id="myChart"></canvas>
-        <section class="range-slider">
-            <span class="rangeValues"></span>
-            <input value="1" min="1" max="10000" type="range"/>
-            <input value="1000" min="1" max="10000" type="range"/>
-        </section>
-    </div>
+    <canvas id="myChart"></canvas>
+    <section class="range-slider">
+        <span class="rangeValues"></span>
+        <input value="1" min="1" max="10000" type="range"/>
+        <input value="1000" min="1" max="10000" type="range"/>
+    </section>
+</div>
 
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<style type="text/css">
+    .fa_custom {
+        color: #0099CC
+    }
+</style>
 
-    <style type="text/css">
-        .fa_custom {
-            color: #0099CC
-        }
-    </style>
-
-    <div style="margin-top:50px;"></div>
+<div style="margin-top:50px;"></div>
 
 
 </body>
 
 </html>
-
-
