--- a/src/main/webapp/Importside.html
+++ b/src/main/webapp/Importside.html
@@ -20,25 +20,39 @@
 </div>
 
 
-<input type="text" id="cpr">
+<input type="text" id="input">
 <button onclick="findAftalerImport()"> Find Aftaler </button>
 <button onclick="findSessionIDImport()"> Find Session ID </button>
-<button onclick="findEkgDataImport()"> Find Session ID </button>
+<button onclick="findEkgDataImport()"> Find EKG measurements </button>
 
-
-
-<!--<div class="dropdown">
-    <button onclick="myFunction()" class="dropdownbtn">Vælg data</button>
-    <div id="myDropdown" class="dropdown-content">
-        <label value="gruppe 1" onclick="fetchfunction('1');">Aftaler</label>
-        <label value="gruppe 2" onclick="fetchfunction('2');">Session ID</label>
-        <label value="gruppe 3" onclick="fetchfunction('3');">EKG data</label>
-    </div>
-</div> -->
-
-
-<!-- <button class="button1" onclick="window.location.replace('StartSide.html');">Go back</button> -->
 <div class="tekstfelt" id="tekstfelt"></div>
+
+<div class="chartWrap">
+    <canvas id="gruppe2"></canvas>
+    <section class="range-slider">
+        <span class="rangeValues"></span>
+        <input value="1" min="1" max="10000" type="range"/>
+        <input value="1000" min="1" max="10000" type="range"/>
+    </section>
+</div>
+
+<div class="chartWrap">
+    <canvas id="gruppe3"></canvas>
+    <section class="range-slider">
+        <span class="rangeValues"></span>
+        <input value="1" min="1" max="10000" type="range"/>
+        <input value="1000" min="1" max="10000" type="range"/>
+    </section>
+</div>
+
+<div class="chartWrap">
+    <canvas id="gruppe4"></canvas>
+    <section class="range-slider">
+        <span class="rangeValues"></span>
+        <input value="1" min="1" max="10000" type="range"/>
+        <input value="1000" min="1" max="10000" type="range"/>
+    </section>
+</div>
 
 
 </body>
