--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -26,65 +26,44 @@
         </div>
     </div>
 
-    <!-- Her begynder selve Resultat- siden, hvor man ville kunne vælge dato samt resultat.   -->
-
+<div>
     <title> PrøveResultater</title>
+</div>
+
 
 </head>
 <body>
 <h1>Prøve Resultater </h1>
-<div style="margin-top:50px;">
-
-</div>
+<div style="margin-top:50px;"></div>
 
 <!--   Skrive CPR-nummer       -->
 <div class="CPR-nummerChoose">
     <h3>Find sessionID ud fra CPR-nummer</h3>
-    <label for="CPRnummerBoks">CPR:</label>
-    <input type="text" id="CPRnummerBoks" required name="cprNummerVælger">
-</div>
-<div>
-    <button onclick="findEKGSession()" type="button">Find sessions</button>
-    <button onclick="findAlleEKGSessions()" type="button">Find alle sessions</button>
+    <label for="CPRBoks">CPR:</label>
+    <input type="text" id="CPRBoks" required name="cprNummerVælger">
 </div>
 
-<div class="searchField" id="searchFieldArea"></div>-->
+<div>
+    <button onclick="findEKGSessions()" type="button">Find sessions</button>
+    <!--<button onclick="findAlleEKGSessions()" type="button">Find alle sessions</button>-->
+</div>
+
+<div class="searchField" id="searchFieldArea"></div>
 
 <div class="SesIDtilEKG">
     <h3>Indtast sessionID og hent EKG-måling</h3>
-    <label for="sesID">SessionID:</label>
-    <input type="text" id="sesID" required name="sesID">
+    <label for="sessionID">SessionID:</label>
+    <input type="text" id="sessionID" required name="sessionID">
 </div>
+
 <div>
     <button onclick="HentEkgData()" type="button">Hent EKG-data</button>
-
 </div>
 
-
-<!-- 2 labels, som et eksemple, hvis man vil vise resultat i et bestemt periode, så ville man kunne vælge dato fra og til   -->
-<div>
-    <p>
-        <label for="start">Dato fra:</label>
-
-        <input type="date" id="start" name="resultat-start"
-               value="2022-01-01"
-               min="2018-01-01" max="2023-12-31">
-    </p>
-    <p>
-        <label for="start">Dato til:</label>
-
-        <input type="date" id="slut" name="resultat-slut"
-               value="2022-01-01"
-               min="2018-01-01" max="2023-12-31">
-    </p>
-</div>
-
-<!-- et eksempel for at vise resultatet i boksen efter man har valgt de relevante datoer samt undersøgelse  -->
 
 
 <h3>Resultat:</h3>
-<i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#"
-                                                                                       onclick="window.print();return false;">Print</a>
+<i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#" onclick="window.print();return false;">Print</a>
 <div class="chartWrap">
 
     <canvas id="myChart"></canvas>
