--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -27,13 +27,13 @@
     </div>
 
 <div>
-    <title> PrøveResultater</title>
+    <title>Resultater</title>
 </div>
 
 
 </head>
 <body>
-<h1>Prøve Resultater </h1>
+<h1>Resultater </h1>
 <div style="margin-top:50px;"></div>
 
 <!--   Skrive CPR-nummer       -->
@@ -52,8 +52,8 @@
 
 <div class="SesIDtilEKG">
     <h3>Indtast sessionID og hent EKG-måling</h3>
-    <label for="sessionID">SessionID:</label>
-    <input type="text" id="sessionID" required name="sessionID">
+    <label for="sesID">SessionID:</label>
+    <input type="text" id="sesID" required >
 </div>
 
 <div>
@@ -61,7 +61,7 @@
 </div>
 
 
-
+<div class="seperate"></div>
 <h3>Resultat:</h3>
 <i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#" onclick="window.print();return false;">Print</a>
 <div class="chartWrap">
@@ -76,14 +76,14 @@
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<style type="text/css">
+<style >
     .fa_custom {
         color: #0099CC
     }
 </style>
 
 <div style="margin-top:50px;"></div>
-
+<div class="seperate"></div>
 
 </body>
 
