endelig udgave med kommentarer og author

--- a/src/main/webapp/Importside.html
+++ b/src/main/webapp/Importside.html
@@ -1,9 +1,14 @@
+<!--
+@Author ${Mia}
+@Date ${jan 2022}
+-->
+
 <!DOCTYPE html>
 
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <title>Importside</title>
+    <title>Import</title>
     <link rel="stylesheet" type="text/css" href="Importside.css">
     <link rel="stylesheet" type="text/css" href="Startside.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
