--- a/src/main/webapp/LoginSide.html
+++ b/src/main/webapp/LoginSide.html
@@ -1,11 +1,17 @@
+<!--
+@Author ${tidligere kode fra IT3 grp4}
+@Date ${}
+-->
+
 <!DOCTYPE html>
 
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <title> Login side</title>
+    <title> Login </title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="Login.css">
+    <script src="Login.js"></script>
 </head>
 
 <body>
@@ -26,5 +32,5 @@
 
 </div>
 </body>
-<script src="Login.js"></script>
+
 </html>
