--- a/src/main/webapp/Resultatside.html
+++ b/src/main/webapp/Resultatside.html
@@ -1,38 +1,34 @@
+<!--
+@Author ${Magnus & Mia}
+@Date ${jan 2022}
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
 
-    <!-- Herunder angives der hvilken stylesheets der skal bruges.
-    Den nedenstående  er css-filen, som er lavet til selve Resultater-siden. -->
     <link rel="stylesheet" type="text/css" href="Resultatside.css">
     <link rel="stylesheet" type="text/css" href="Startside.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="Resultatside.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <!-- Nedenunder angives stylesheet der skal bruges til at lave bla. menu-baren, som skal være på alle sider -->
-
-
-    <div class="main">
-        <!-- Menu-barens indhold, i form af en unordered list -->
-        <!-- List items er de forskellige sider, som er forbundet via. et href link. -->
-
-        <div class="hotbar">
-            <button class="button1" onclick="window.location.replace('Importside.html')"> Import</button>
-            <button class="button1" onclick="window.location.replace('Resultatside.html')">Resultater</button>
-            <button class="button1" onclick="window.location.replace('StartSide.html')">Startside</button>
-            <button class="button1" onclick="logud()">Log ud</button>
-        </div>
-    </div>
-
-<div>
     <title>Resultater</title>
-</div>
-
-
 </head>
 <body>
+
+<div class="main">
+    <!-- Menu-barens indhold, i form af en unordered list -->
+    <!-- List items er de forskellige sider, style til dette kommer fra Startside.css -->
+
+    <div class="hotbar">
+        <button class="button1" onclick="window.location.replace('Importside.html')"> Import</button>
+        <button class="button1" onclick="window.location.replace('Resultatside.html')">Resultater</button>
+        <button class="button1" onclick="window.location.replace('StartSide.html')">Startside</button>
+        <button class="button1" onclick="logud()">Log ud</button>
+    </div>
+</div>
+
 <h1>Resultater </h1>
 <div style="margin-top:50px;"></div>
 
@@ -45,15 +41,15 @@
 
 <div>
     <button onclick="findEKGSessions()" type="button">Find sessions</button>
-    <!--<button onclick="findAlleEKGSessions()" type="button">Find alle sessions</button>-->
 </div>
-
+<!-- område til udskrevne sessions-->
 <div class="searchField" id="searchFieldArea"></div>
 
+<!-- visning af EKG ved søgning på SessionID-->
 <div class="SesIDtilEKG">
     <h3>Indtast sessionID og hent EKG-måling</h3>
     <label for="sesID">SessionID:</label>
-    <input type="text" id="sesID" required >
+    <input type="text" id="sesID" required>
 </div>
 
 <div>
@@ -62,28 +58,25 @@
 
 
 <div class="seperate"></div>
-<h3>Resultat:</h3>
-<i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#" onclick="window.print();return false;">Print</a>
-<div class="chartWrap">
+<h3>Resultat:
 
-    <canvas id="myChart"></canvas>
-    <section class="range-slider">
-        <span class="rangeValues"></span>
-        <input value="1" min="1" max="10000" type="range"/>
-        <input value="1000" min="1" max="10000" type="range"/>
-    </section>
-</div>
+    <!-- link til at udskrive siden-->
+    <i class="fa fa-print fa_custom" style="margin-bottom: 30px; position: center"></i> <a href="#"
+                                                                                           onclick="window.print();return false;">Print</a>
+
+    <!-- område til EKG chart-->
+    <div class="chartWrap">
+
+        <canvas id="myChart"></canvas>
+        <section class="range-slider">
+            <span class="rangeValues"></span>
+            <input value="1" min="1" max="10000" type="range"/>
+            <input value="1000" min="1" max="10000" type="range"/>
+        </section>
+    </div>
 
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<style >
-    .fa_custom {
-        color: #0099CC
-    }
-</style>
-
-<div style="margin-top:50px;"></div>
-<div class="seperate"></div>
+    <div class="seperate"></div>
 
 </body>
 
